* core: reallow names beginning with "#" for bars, proxies and filters
* core: escape special chars (`#[\`) in configuration files for name of options
  (bug #36584)
* guile: fix path of guile include dirs in cmake build (patch #7790)
* irc: fix freeze when reading on socket with SSL enabled (bug #35097)
* irc: reallow names beginning with "#" for servers

Version 0.3.8 (2012-06-03)
--------------------------

* core: support lines of 16 Kb long in configuration files (instead of 1 Kb)
* core: fix crash in focus hook for nicklist (bug #36271)
* core: fix truncated configuration files (zero-length) after system crash
  (bug #36383)
* core: fix display bugs and crashs with small windows (bug #36107)
* core: convert options weechat.look.prefix_align_more and
  weechat.look.prefix_buffer_align_more from boolean to string (task #11197)
* core: fix display bug with prefix when length is greater than max and prefix
  is ending with a wide char (bug #36032)
* core: add option weechat.look.prefix_same_nick (hide or change prefix on
  messages whose nick is the same as previous message) (task #11965)
* core: convert tabs to spaces in text pasted (bug #25028)
* core: add a connection timeout for child process in hook_connect (bug #35966)
* core: follow symbolic links when writing configuration files (.conf)
  (task #11779)
* core: fix lost scroll when switching to a buffer with a pending search
* core: add support of terminal "bracketed paste mode", new options
  weechat.look.paste_bracketed and weechat.look.paste_bracketed_timer_delay
  (task #11316)
* core: fix display of wide chars on last column of chat area (patch #7733)
* doc: add japanese FAQ (patch #7781)
* api: display warning in scripts when invalid pointers (malformed strings) are
  given to plugin API functions (warning displayed if debug for plugin is >= 1)
* api: add list "gui_buffer_last_displayed" in hdata "buffer"
* scripts: fix type of argument "rc" in callback of hook_process (from string to
  integer)