@@ -18,6 +18,7 @@ Version 0.3.9 (under dev!)
 * guile: fix path of guile include dirs in cmake build (patch #7790)
 * irc: fix freeze when reading on socket with SSL enabled (bug #35097)
 * irc: reallow names beginning with "#" for servers
+* python: fix crash when unloading a script without pointer to interpreter
 
 Version 0.3.8 (2012-06-03)
 --------------------------
